--- a/Conf/lhie1_surge.ini
+++ b/Conf/lhie1_surge.ini
@@ -19,4 +19,4 @@ surge_ruleset=DIRECT,https://raw.githubusercontent.com/tindy2013/subconverter/ma
 surge_ruleset=Domestic,[]GEOIP,CN
 surge_ruleset=Others,[]MATCH
 
-surge_rule_base=https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/lhie1_surge.conf
+surge_rule_base=https://raw.githubusercontent.com/isSuperman/Surge/master/Conf/surge_base.conf
