--- a/Conf/surge_base.conf
+++ b/Conf/surge_base.conf
@@ -1,6 +1,5 @@
-{{ fetch("https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Head.conf") }}
+{{ fetch("https://raw.githubusercontent.com/isSuperman/Surge/master/Conf/Head.conf") }}
 [Proxy]
 [Proxy Group]
 [Rule]
-{{ fetch("https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Script.conf") }}
-{{ fetch("https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/MitM.conf") }}
+{{ fetch("https://raw.githubusercontent.com/isSuperman/Surge/master/Conf/MitM.conf") }}
