--- a/Conf/lhie1_surge.ini
+++ b/Conf/lhie1_surge.ini
@@ -8,3 +8,5 @@ surge_ruleset=🎯 全球直连,[]GEOIP,CN
 surge_ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=!!import:https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/acl4ssr_group_common.list
+
+surge_rule_base=https://raw.githubusercontent.com/isSuperman/Surge/master/Conf/surge_base.conf
