--- a/Conf/lhie1_surge.ini
+++ b/Conf/lhie1_surge.ini
@@ -1,4 +1,6 @@
 [custom]
+enable_rule_generator=true
+overwrite_original_rules=true
 
 surge_ruleset=!!import:https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/acl4ssr_ruleset_common.list
 surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
