--- a/conf/lhie1_surge.ini
+++ b/conf/lhie1_surge.ini
@@ -2,7 +2,7 @@
 enable_rule_generator=true
 overwrite_original_rules=true
 
-surge_ruleset=!!import:https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac8652dbd40c5d2715b/raw/acl4ssr_ruleset_common.list
+surge_ruleset=!!import:https://raw.githubusercontent.com/isSuperman/Surge/master/list/ruleset_common.list
 surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 surge_ruleset=🎯 全球直连,[]GEOIP,CN
