优化抖音去广告水印

--- a/conf/URL_Rewrite.conf
+++ b/conf/URL_Rewrite.conf
@@ -1,4 +1,9 @@
 [URL Rewrite]
+#抖音去水印和广告搭配Mitm和Js使用
+(?<=_region=)CN(?=&) JP 307
+(?<=&app_version=)15..(?=.?.?&) 1 307
+(?<=\?version_code=)15..(?=.?.?&) 1 307
+
 # > Redirect Google Service
 ^https?:\/\/(www.)?g\.cn https:\/\/www.google.com 302
 ^https?:\/\/(www.)?google\.cn https:\/\/www.google.com 302
